Time: 3 ms (21.91%), Space: 44.6 MB (81.2%) - LeetHub